hard-gists/7adc87d2c4fde941cea6/run.log
=== Docker Run Log for 7adc87d2c4fde941cea6 ===
Started at: Mi 29. Okt 17:26:41 CET 2025

[2025-10-29 17:26:42] START: Running container for 7adc87d2c4fde941cea6
[2025-10-29 17:26:42] SUCCESS: Container 0703fb91bb05aaf88fadcbd0cf1ea94c7453b6db005791eb0f0a72822869bb19 started for 7adc87d2c4fde941cea6
=== Container logs for 7adc87d2c4fde941cea6 ===
  File "/snippet.py", line 32
    print 'caffe_feature_extractor.py -i <inputfile> -o <outputfile>'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 7adc87d2c4fde941cea6 ===
[2025-10-29 17:26:44] INFO: Container 0703fb91bb05aaf88fadcbd0cf1ea94c7453b6db005791eb0f0a72822869bb19 has stopped
